# rustpbx

./: .dockerignore  Cargo.toml
.zed/: debug.json  settings.json  tasks.json
crates/: README.md
crates/cloudpbx/: Cargo.toml  README.md  build.rs
crates/cloudpbx/src/: app.rs  cloud_api.rs  lib.rs
crates/cloudpbx/web/: index.html  package.json  tsconfig.json  vite.config.ts
crates/cloudpbx/web/src/: App.vue
crates/cloudpbx/web/src/components/ui/button/: Button.vue
crates/cloudpbx/web/src/components/ui/card/: CardTitle.vue
crates/cloudpbx/web/src/components/ui/input/: Input.vue
crates/cloudpbx/web/src/router/: index.ts
crates/cloudpbx/web/src/stores/: auth.ts
crates/rustpbx-control/: Cargo.toml  build.rs  rustpbx-control.toml.example
crates/rustpbx-control/src/: audit_service.rs  config.rs  config_change_watcher.rs  did_service.rs  http_api.rs  main.rs  settings.rs  tenant_service.rs  tenant_user_service.rs  worker_registry.rs
crates/rustpbx-control/src/auth/: mod.rs  password.rs  permissions.rs
crates/rustpbx-control/src/grpc/: control_plane.rs  mod.rs
crates/rustpbx-control/src/migration/: add_domain_to_tenants.rs  add_tenant_id_to_call_records.rs  add_tenant_id_to_extensions.rs  add_tenant_id_to_queues.rs  add_tenant_id_to_routing.rs  add_tenant_id_to_trunks.rs  create_acl_rules.rs  create_call_records.rs  create_departments.rs  create_extension_departments.rs  create_extensions.rs  create_ivrs.rs  create_platform_settings.rs  create_queues.rs  create_routing.rs  create_sip_trunks.rs  mod.rs
crates/rustpbx-control/src/models/: audit_log.rs  did_number.rs  mod.rs  tenant.rs  tenant_user.rs
crates/rustpbx-control/src/raft/: log_store.rs  mod.rs  network.rs  registry.rs  server.rs  state_machine.rs  types.rs
crates/rustpbx-control/src/store/: crud.rs  db_queries.rs  mod.rs
crates/rustpbx-control/web/: index.html  package.json  tsconfig.json  vite.config.ts
crates/rustpbx-control/web/src/: App.vue  main.ts  style.css
crates/rustpbx-control/web/src/api/: client.ts
crates/rustpbx-control/web/src/components/: AppShell.vue  ComingSoon.vue
crates/rustpbx-control/web/src/components/ui/badge/: Badge.vue  index.ts
crates/rustpbx-control/web/src/components/ui/button/: Button.vue  index.ts
crates/rustpbx-control/web/src/components/ui/card/: Card.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
crates/rustpbx-control/web/src/components/ui/dialog/: Dialog.vue
crates/rustpbx-control/web/src/components/ui/input/: Input.vue
crates/rustpbx-control/web/src/components/ui/label/: Label.vue
crates/rustpbx-control/web/src/components/ui/table/: Table.vue  TableBody.vue  TableCell.vue  TableEmpty.vue  TableHead.vue  TableHeader.vue  TableRow.vue  index.ts
crates/rustpbx-control/web/src/i18n/: index.ts
crates/rustpbx-control/web/src/i18n/locales/: en.ts  zh.ts
crates/rustpbx-control/web/src/layouts/: SuperAdminLayout.vue  TenantAdminLayout.vue  TenantLayout.vue
crates/rustpbx-control/web/src/lib/: utils.ts
crates/rustpbx-control/web/src/router/: index.ts
crates/rustpbx-control/web/src/stores/: auth.ts
crates/rustpbx-control/web/src/views/: Login.vue
crates/rustpbx-control/web/src/views/admin/: Audit.vue  Dashboard.vue  Dids.vue  Edges.vue  PlatformSettings.vue  Quotas.vue  Raft.vue  Tenants.vue  Workers.vue
crates/rustpbx-control/web/src/views/tadmin/: Acl.vue  Audit.vue  CallRecords.vue  Dashboard.vue  Dids.vue  Domain.vue  Extensions.vue  Ivrs.vue  Queues.vue  Routing.vue  Trunks.vue  Users.vue
crates/rustpbx-control/web/src/views/tenant/: Profile.vue
crates/rustpbx-core/: Cargo.toml
crates/rustpbx-core/src/: internal.rs  lib.rs  policy.rs  routing.rs  stun.rs  tenant.rs
crates/rustpbx-edge/: Cargo.toml  build.rs  rustpbx-edge.toml.example
crates/rustpbx-edge/src/: active_call_hook.rs  call_router.rs  config.rs  config_source.rs  config_watcher.rs  dialog_path.rs  edge_worker_server.rs  grpc_client.rs  headers.rs  internal_peer.rs  main.rs  proto.rs  worker_selector.rs
crates/rustpbx-netprobe/: Cargo.toml
crates/rustpbx-netprobe/src/: health.rs  lib.rs
crates/rustpbx-proto/: Cargo.toml  build.rs
crates/rustpbx-proto/proto/: control_plane.proto  edge_worker.proto  raft.proto
crates/rustpbx-proto/src/: lib.rs
crates/rustpbx-worker/: Cargo.toml  build.rs  rustpbx-worker.toml.example
crates/rustpbx-worker/proto/: control_plane.proto
crates/rustpbx-worker/src/: addons.rs  call_router.rs  cdr_hook.rs  config.rs  control_client.rs  dialplan_resolver.rs  edge_worker.rs  extension_location.rs  headers.rs  internal_peer.rs  main.rs  metrics.rs  proto.rs  reservations.rs  session_hook.rs  state_reporter.rs  worker_call_module.rs
crates/rustpbx-worker/src/rtp_gateway/: bridge.rs  command.rs  handle.rs  logging_sink.rs  media_thread.rs  mod.rs
deploy/: Dockerfile
deploy/k8s/: control.yaml  edge.yaml  worker.yaml
docs/: architecture.html  cloudpbx-monolith-refactor-plan.md
examples/: sipflow_bench.rs
src/: app.rs  lib.rs
src/api/: mod.rs
src/cloudpbx/: mod.rs
src/console/: mod.rs
src/console/handlers/: mod.rs
src/media/: wav_reader.rs
src/models/: add_tenant_scope_columns.rs  call_record.rs  extension.rs  migration.rs  mod.rs  routing.rs  sip_trunk.rs  tenant.rs  user.rs
src/proxy/: config_source.rs
src/proxy/tests/: test_dn_events_e2e.rs  test_voip_bridge_e2e.rs
tests/: rwi_binary_pcm_e2e_test.rs  rwi_comprehensive_event_test.rs  rwi_full_event_chain_e2e_test.rs  rwi_leg_timeline_e2e_test.rs  rwi_resume_e2e_test.rs  rwi_server_test.rs
web/: components.json
web/src/: style.css
web/src/api/: client.ts
web/src/components/ui/badge/: Badge.vue
web/src/components/ui/card/: CardContent.vue
web/src/components/ui/label/: Label.vue
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/views/: Dashboard.vue  Login.vue
