[package]
name = "rustpbx-edge"
version = "0.1.0"
edition = "2024"
description = "RustPBX SIP Edge Gateway — fixed-IP SIP trunk registration and call dispatch"
license = "MIT"

[[bin]]
name = "rustpbx-edge"
path = "src/main.rs"

[dependencies]
# Shared types
rustpbx-core = { path = "../rustpbx-core" }
# Shared protobuf/gRPC definitions (compiled once in rustpbx-proto).
rustpbx-proto = { path = "../rustpbx-proto" }
# Public-IP / NAT-type detection (STUN).
rustpbx-netprobe = { path = "../rustpbx-netprobe" }

# Main rustpbx crate — Edge reuses SipServer, ProxyDataContext, TrunkRegistrar
rustpbx = { path = "../.." }

# SIP stack (same version as rustpbx)
rsipstack = "0.5.11"

# gRPC client for Control Plane
tonic = { version = "0.13", features = ["transport", "tls-ring"] }
prost = "0.13"

# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
